public/assets/client/css/userProfile.css
/* ============ User Identity ============= */

.profile-identity{
    border-bottom: 1px solid rgba(0, 0, 0, 0.227);
    margin: auto;
    padding-block-end: 1.5rem;
    width: 70%;
}

.profile-card--avatar {
    max-width: 160px;
    max-height: 160px;
    min-width: 160px;
    min-height: 160px;
    margin-inline-end: 1.5rem;
    display: inline-block;
    position: relative;
}

.profile-avatar {
    width: 100%;
    height: 100%;
}

.is_active-dot {
    width: 12px;
    height: 12px;
    background-color: var(--main-darker-green-color);
    position: absolute;
    top: 12px;
    right: 24px;
}

.profile-identity .user-info .user-brief {
    font-size: 0.8rem;
}

/* ============ /User Identity ============= */

/* ============ Responsive ================= */ 

@media (max-width: 885px) {
    .profile-identity,
    .profile-identity .user-info {
        display: flex;
        justify-content: center;
    }

    .profile-identity .user-info {
        flex-direction: column;
        align-items: center;
    }
}

/* ============ /Responsive ================= */

